# sed_model22

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEVLOG.md  IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  SESSION_START_CONTEXT.md  V0_2_IMPLEMENTATION_HANDOFF.md  V0_3_ROADMAP.md
docs/architecture/: decision-log.md  media-output-spec.md  repo-structure.md  simulation-roadmap.md
docs/research/: CANON.md  PERFORATED_BAFFLE_AND_PLATE_SETTLER_MODELING_MEMO.md  PRIMER.md  VISUALIZATION_METHODS_REVIEW_NOTES.md
docs/research/source-notes/: 2D Basin Simulator_math.md  2D hydraulic simulator.md  AI-Assisted Basin Modeling Roadmap.md  (+14 more)
scenarios/: alternative_three_baffle_basin.yaml  baseline_rectangular_basin.yaml  preview_three_baffle_high_energy.yaml  svwtp_current_blocked_wall_basin.yaml  svwtp_design_spec_basin.yaml  verification_empty_basin.yaml
scenarios/studies/: svwtp_design_vs_current.yaml
src/sed_model22/: __init__.py  cli.py  config.py  run.py  study.py
templates/: intake_geometry_survey.yaml
tests/: test_cli.py  test_config.py  test_config_v2.py  test_longitudinal_mesh.py  test_longitudinal_solver.py  test_longitudinal_solver_verification.py  test_media.py  test_mesh.py  test_mesh_sensitivity.py  test_metrics.py  test_solver.py  test_solver_verification.py  test_study.py  test_voxel_visualization.py
visualizations/: README.md  v0_1_test_pair_voxel_comparison.html  v0_2_design_vs_current_voxel_comparison.html
visualizations/templates/: v0_1_test_pair.yaml  v0_2_design_vs_current.yaml
(+35 files in other folders)
